--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 #webPage {
-    background-color: #DDDDDD;
+    background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
     width: 1200px;
