--- a/style.css
+++ b/style.css
@@ -91,9 +91,9 @@ canvas {
 }
 
 .normBtn {
-    background-color: #4466FF;
+    background-color: var(--buttonDefault);
     color: white;
-    border: solid 2px #4060FF;
+    border: solid 2px var(--buttonDefaultBorder);
     height: 30px;
     width: 200px;
     padding: 5px 0px;
@@ -105,6 +105,28 @@ canvas {
 }
 
 .normBtn:hover {
-    background-color: #5888FF;
+    background-color: var(--buttonHover);
     cursor: pointer;
+}
+
+.selectedBtn {
+    background-color: var(--buttonHover);
+    color: white;
+    border: solid 2px var(--buttonDefaultBorder);
+    height: 30px;
+    width: 200px;
+    padding: 5px 0px;
+    border-radius: 5px;
+    transition: 50ms;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+:root {
+    --buttonDefault: #4466FF;
+    --buttonDefaultBorder: #4060FF;
+    --buttonHover: #5888FF;
+    --buttonOff: #FF4D4D;
+    --buttonOffBorder: #CC0000;
 }
